# hb-data-engineering

./: .gitignore  README.md
A001/: main.py
complementary-material/lives/: consume.py  mensageria.py
complementary-material/lives/terraform-and-cloudformation/: bucket.tf  buckets.yml  redshift.yml
exercises/01/: main.py
exercises/02/: Dockerfile  Script.sql  Script2.sql  Script3.sql  Script4.sql  commands.txt  docker-compose.yml  main.py
exercises/02-sql/: commands.txt
exercises/02/db/: postmaster.pid
exercises/02/web/: index.html
exercises/03/: 2-backoff.py  main.py  podcasts.csv  quotation.py
exercises/03-logging/: 3-logging.py  4-podcast.py
exercises/04/: apis.py
exercises/04-data-ingestion/: apis.py  ingestors.py  requirements.txt
exercises/04-data-ingestion/mercado_bitcoin/: ingestors.py  main.py  writers.py
exercises/04-data-ingestion/tests/: commands.txt  test_api.py  test_apis.py  test_ingestors.py  test_integration.py
exercises/05-crawler/: location.py  movies.csv  movies.py  requirements.txt
exercises/06-jenkins/: Dockerfile  docker-commands.txt  docker-compose.yml
exercises/07-aws-introduction/: main.py
exercises/08-aws-lambda/: .pre-commit-config.yaml  Makefile  commands.txt  pyproject.toml  zappa_settings.json
exercises/08-aws-lambda/src/: apis.py  checkpoints.py  ingestors.py  lambda_function.py  main.py  writers.py
exercises/08-continuous-integration/: README.md
exercises/09-dms/: insert.py  update.py
exercises/10-sns/: publish.py  receive.py
exercises/11-airflow/: docker-compose.yaml
(+118 files in other folders)
