[tool.poetry]
name = "aws-lambda"
version = "0.1.0"
description = ""
authors = ["Caio <cfascina@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
ratelimit = "^2.2.1"
backoff = "^1.11.1"
boto3 = "^1.18.41"
schedule = "^1.1.0"
pynamodb = "^5.1.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
zappa = "^0.50.0"
flake8 = "^3.9.2"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py38']
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.github
  | \.circleci
  | \.hg
  | \.mypy_cache
  | \.tox
  | \venv
  | \.venv
  | \.eggs
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''